// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`models/geobase/weather-region без параметра id возвращает регион 1`] = `
Array [
  Array [
    "region-by-ip",
    Object {
      "ip": "FAKE_IP",
    },
  ],
]
`;

exports[`models/geobase/weather-region без параметра id возвращает родительсий регион 1`] = `
Array [
  Array [
    "region-by-ip",
    Object {
      "ip": "FAKE_IP",
    },
  ],
  Array [
    "region-by-id",
    Object {
      "id": 3,
    },
  ],
]
`;
